syntax = "proto3";
package favorite;
option go_package=".;proto";

import "proto/feed.proto";

service FavoriteSrv{
  //点赞操作
  rpc douyin_favorite_action(douyin_favorite_action_request) returns (douyin_favorite_action_response);//点赞视频
  //点赞列表
  rpc douyin_favorite_list(douyin_favorite_list_request) returns (douyin_favorite_list_response);//点赞列表
}

message douyin_favorite_list_request{
  int64 user_id =1;
  string token =2;
}
message douyin_favorite_list_response{
  int32 status_code=1;
  string status_msg= 2;
  repeated feed.Video video_list =3;
}


message douyin_favorite_action_request{
  int64 user_id =1;
  string token =2;
  int64 video_id =3;
  int32 action_type = 4;
}

message douyin_favorite_action_response{
  int32 status_code =1;
  string status_msg =2;
}