syntax = "proto3";
option go_package=".;proto";

service Publish{

  rpc PostVideo(douyin_publish_action_request) returns (douyin_publish_action_response);//视频投稿

  rpc UserVideoList(douyin_publish_list_request)returns(douyin_publish_list_response);//查询用户投稿的视频列表。
}
message douyin_publish_action_request{
  string token = 1; //用户鉴权token
  bytes  data = 2; //视频数据
  string title = 3; //视频标题

  UserIn user = 4; //用户ID
}
message douyin_publish_action_response{
  int32  status_code = 1; // 状态吗，0-成功，其他值-失败
  string status_msg = 2; //返回状态描述
}

message douyin_publish_list_request{
  int64 user_id = 1; //用户id
  string token =2;  //用户鉴权token
}
message douyin_publish_list_response{
  int32  status_code =1; //状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated video video_list =3; //用户发布的视频列表
}

message video{
  int64  video_id = 1; //视频唯一标识
  UserIn author = 2; //视频作者信息
  string  play_url = 3;//视频播放地址
  string cover_url = 4;//视频封面地址
  int64  favorite_count =5; // 视频的点赞总数
  int64  comment_count =6;//视频的评论总数
  bool  is_favorite = 7; //true-已点赞,false-未点赞
  string  title = 8; //视频标题
}

message UserIn {
  int64  id = 1; //用户id
  string  name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64  follower_count = 4; // 粉丝总数
  bool  is_follow = 5; // true-已关注，false-未关注。

  string password = 6;//用户密码
}